compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__completions_for_an_import.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1137
expression: "import dep\n\npub fn main() {\n  0\n}"
---
import dep|

pub fn main() {
  0
}


----- Completion content -----
rakun
  kind:   Module
  edits:
    [0:7-0:7]: "rakun"
