compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__completions_for_an_import_from_dependency.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1000
expression: "import rakun\n\npub fn main() {\n  0\n}"
---
import rak|un

pub fn main() {
  0
}


----- Completion content -----
example_module
  kind:   Module
  edits:
    [0:7-0:7]: "example_module"
